style: Spotless 적용으로 Java 코드 포맷 정리